# oic_scrape

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  LICENSE.txt  README.md  design_notes.md  pyproject.toml  scrapy.cfg  split_jsonl_files.sh
analysis/: knight-grants.json
analysis/czi/: czi.duckdb  grants-by-url  grants-reformatted.json  grants.json
analysis/mellon/: mellon-graphql.json  mellon.graphqls
analysis/nih/: nih_gov.ipynb
data/: arcadia-fund--giving360_grants.jsonl  dorrisduke.org_grants.jsonl  helmsley.org_grants.json  helmsley.org_grants.jsonl  jsmf.org_grants.jsonl  knightfoundation_org_grants.jsonl  kressfoundation.org_grants.jsonl  simons.org_life-sciences-grants.jsonl  sloan.org_grants.json  sloan.org_grants.jsonl
data/202404/: dorrisduke.org_grants.jsonl  helmsley.org_grants.jsonl
data/202408-202411/: arcadia-fund--giving360_grants.jsonl  kressfoundation.org_grants.jsonl
notebook_pipelines/: .gitignore  arcadiafund.org.uk.ipynb  gatesfoundation.org.ipynb  neh_gov.ipynb  nih_gov.ipynb  nsf_gov.ipynb  rwjf.org.ipynb  wellcome.org.ipynb
oi_catalog_scraping_pipeline/: items.py  middlewares.py  pipelines.py  settings.py
oi_catalog_scraping_pipeline/spiders/: sloan_org.py
oic_scrape/: items.py  pipelines.py  settings.py  validation.py
oic_scrape/spiders/: chanzuckerberg_com.py  dfg_de.py  dorisduke_org.py  helmsley_org.py  hewlett_org.py  imls_gov.py  jsmf_org.py  knightfoundation_org.py  kressfoundation_org.py  macfound_org.py  mellon_org.py  mellon_org_graphql.py  moore_org.py  nasa_grants.py  simons_lifesciences.py  sloan_org.py  sshrc_ca.py  templeton_org.py
