[tool.poetry]
name = "oic_scrape"
version = "0.1.0"
description = "Invest in Open Infrastructure's data retrieval pipeline for their Catalog of Open Infrastructure and Tools"
authors = ["David Riordan <dr@daveriordan.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Scrapy = "^2.11.0"
scrapy-playwright = "^0.0.34"
dateparser = "^1.2.0"
pyarrow = "^15.0.0"
papermill = "^2.5.0"
requests = "^2.32.0"
pandas = "^2.2.0"
duckdb = "^0.10.0"
tqdm = "^4.66.3"
polars = "^0.20.8"
attrs = "^23.2.0"
python-calamine = "^0.2.0"
currencyconverter = "^0.17.17"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
jupyter = {extras = ["notebook"], version = "^1.0.0"}
ipython = "^8.21.0"
pandas = "^2.2.0"
requests = "^2.32.0"
papermill = "^2.5.0"
pyarrow = "^15.0.0"
ydata-profiling = "^4.6.4"
perspective-python = "^2.7.1"
requests-cache = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]