[tool.poetry]
name = "oic_scrape"
version = "0.1.0"
description = "Invest in Open Infrastructure's data retrieval pipeline for their Catalog of Open Infrastructure and Tools"
authors = ["David Riordan <dr@daveriordan.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Scrapy = "^2.11.2"
scrapy-playwright = "^0.0.41"
dateparser = "^1.2.0"
pyarrow = "^15.0.0"
papermill = "^2.5.0"
requests = "^2.31.0"
pandas = "^2.2.2"
duckdb = "^1.1.0"
tqdm = "^4.66.3"
polars = "^1.7.1"
attrs = "^23.2.0"
python-calamine = "^0.2.0"
currencyconverter = "^0.17.17"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
jupyter = {extras = ["notebook"], version = "^1.1.1"}
ipython = "^8.27.0"
pandas = "^2.2.2"
requests = "^2.31.0"
papermill = "^2.6.0"
pyarrow = "^15.0.0"
ydata-profiling = "^4.10.0"
perspective-python = "^3.0.3"
requests-cache = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]